# trading-engine

./: .env  .gitignore  fyers_token.py  main.py  order_management.py  order_manager.py  plan.md  pyproject.toml  readme.md  strategy_one.py  strategy_one_logic.py  system_monitoring.py
broker/fyers_broker/: fyers_data_websocket.py  fyers_position_webscoket.py  fyers_token.py
common_utils/: csv_builder.py  error_handling.py
config/: settings.yml
core/: resource_manager.py  strategy_manager.py
data_manager/: data_manager.py  idata_manager.py
data_manager/candle_builder/: candle_builder.py
data_model/: data_model.py
metrics/: log_metrics_2025-09-12.csv
order_active_state_manager/: order_state_manager.py
order_manager/: fyers_order_placement.py  order_manager.py
src/: engine.py
src/broker/: __init__.py  registry.py
src/core/: data_model.py  enums.py
src/infrastructure/: config_loader.py  error_handling.py  logger.py
src/managers/: candle_manager.py  data_manager.py  order_placement_manager.py  order_state_manager.py  symbol_manager.py  trade_state_manager.py
src/strategies/: base_strategy.py  registry.py
src/trading_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: csv_builder.py
strategies/strategy_one/: logic_manager.py  option_helper.py  strategy_one.py  strategy_one_logic.py  strategy_one_trailling.py  trailing_manager.py  (+1 more)
strategy/: strategy_one.py  strategy_one_logic.py
test/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
utils/: csv_builder.py  logger.py
(+20 files in other folders)
